# japanese_tts_client_rs

./: .gitignore  Cargo.toml  README.md  sweep.yaml
config/: config.toml
src/: api.rs  fs_cache.rs  main.rs  playback.rs  settings.rs  util.rs
