[package]
name = "ttsr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
rust-crypto = "0.2.36"
clipboard-master = "3.1.2"
clipboard = "0.5.0"
rodio = "0.14.0"
regex = "1"
config = "0.11.0"
lazy_static = "1.4.0"
serde = {version = "1.0", features = ["derive"] }