[package]
name = "ttsr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
ring = "0.17.3"
data-encoding = "2.4.0"
clipboard-master = "3.1.3"
clipboard = "0.5.0"
rodio = "0.17.1"
regex = "1.10.0"
config = "0.13.3"
lazy_static = "1.4.0"
serde = {version = "1.0.188", features = ["derive"] }